feat(openapi/pool): expose pool committed bytes
This allows us to easily see if a pool is overcommitted.
